{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 28,
  "lineage": "ea1fa97d-f457-715b-f79b-f3a2d6d1152b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a700ef60f5f53b52",
            "arn": "arn:aws:ec2:us-east-1:449024774937:elastic-ip/eipalloc-0a700ef60f5f53b52",
            "association_id": "eipassoc-0105ea72113009c0b",
            "domain": "vpc",
            "id": "eipalloc-0a700ef60f5f53b52",
            "instance": "i-051bb2ef07d1f1412",
            "network_border_group": "us-east-1",
            "network_interface": "eni-072f00224582e16fa",
            "private_dns": "ip-10-0-1-43.ec2.internal",
            "private_ip": "10.0.1.43",
            "public_dns": "ec2-54-84-53-113.compute-1.amazonaws.com",
            "public_ip": "54.84.53.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dorin-eip"
            },
            "tags_all": {
              "Name": "dorin-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.main",
            "aws_key_pair.main",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091138d0f0d41ff90",
            "arn": "arn:aws:ec2:us-east-1:449024774937:instance/i-051bb2ef07d1f1412",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051bb2ef07d1f1412",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dorin-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072f00224582e16fa",
            "private_dns": "ip-10-0-1-43.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.43",
            "public_ip": "54.84.53.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0da8d5fd261e6626f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c033f8d91a79974d",
            "tags": {
              "Name": "dorin-ec2"
            },
            "tags_all": {
              "Name": "dorin-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0d6e028b5c1e13cb7"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449024774937:internet-gateway/igw-02cebe4f8c1680a0e",
            "id": "igw-02cebe4f8c1680a0e",
            "owner_id": "449024774937",
            "tags": {
              "Name": "dorin-igw"
            },
            "tags_all": {
              "Name": "dorin-igw"
            },
            "vpc_id": "vpc-0b42d5beadc6b5d87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449024774937:route-table/rtb-00668ec1ffdd120d0",
            "id": "rtb-00668ec1ffdd120d0",
            "owner_id": "449024774937",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cebe4f8c1680a0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dorin-public-rt"
            },
            "tags_all": {
              "Name": "dorin-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42d5beadc6b5d87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5efd66af3078cd5",
            "route_table_id": "rtb-00668ec1ffdd120d0",
            "subnet_id": "subnet-0c033f8d91a79974d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449024774937:security-group/sg-0d6e028b5c1e13cb7",
            "description": "Security group for EC2 web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6e028b5c1e13cb7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "89.149.93.193/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dorin-ec2-sg",
            "name_prefix": "",
            "owner_id": "449024774937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dorin-ec2-sg"
            },
            "tags_all": {
              "Name": "dorin-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b42d5beadc6b5d87"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449024774937:subnet/subnet-0c033f8d91a79974d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c033f8d91a79974d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "449024774937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dorin-public-subnet"
            },
            "tags_all": {
              "Name": "dorin-public-subnet"
            },
            "vpc_id": "vpc-0b42d5beadc6b5d87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449024774937:vpc/vpc-0b42d5beadc6b5d87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed4f70a09d015566",
            "default_route_table_id": "rtb-02a861244d7fde357",
            "default_security_group_id": "sg-0d51a811a32789291",
            "dhcp_options_id": "dopt-00437fbdb7e3417df",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b42d5beadc6b5d87",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a861244d7fde357",
            "owner_id": "449024774937",
            "tags": {
              "Name": "dorin-vpc"
            },
            "tags_all": {
              "Name": "dorin-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}